--- a/Ms_Linhh.html
+++ b/Ms_Linhh.html
@@ -24,6 +24,7 @@
         anh1.height="300";
         anh1.width="500";
         console.log(anh1);
+        alert ("I will wait for you !")
     }
 </script>
 </body>
